order fixed and pickupPoints added