@@ -1,18 +1,16 @@
 package org.steelboard.marketplace.service;
 
 import lombok.RequiredArgsConstructor;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import org.steelboard.marketplace.dto.order.OrderDto;
 import org.steelboard.marketplace.entity.*;
 import org.steelboard.marketplace.exception.OrderNotFoundException;
-import org.steelboard.marketplace.repository.*;
+import org.steelboard.marketplace.repository.OrderItemRepository;
+import org.steelboard.marketplace.repository.OrderRepository;
+import org.steelboard.marketplace.repository.PickupPointRepository;
 
 import java.math.BigDecimal;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -22,6 +20,8 @@ public class OrderService {
     private final OrderRepository orderRepository;
     private final OrderItemRepository orderItemRepository;
     private final CartService cartService;
+    private final PickupPointRepository pickupPointRepository;
+    private final PaymentService paymentService;
 
     public Order getOrderById(Long id) {
         return orderRepository.findById(id)
@@ -29,55 +29,58 @@ public class OrderService {
     }
 
     @Transactional(readOnly = false)
-    public Order createOrder(User user, List<Long> productIds) {
+    public Order createOrder(
+            User user,
+            List<Long> productIds,
+            Long pickupPointId
+    ) {
 
         Cart cart = user.getCart();
 
-        // Выбираем CartItems по productIds
+        PickupPoint pickupPoint = pickupPointRepository
+                .findById(pickupPointId)
+                .orElseThrow(() -> new IllegalArgumentException("Pickup point not found"));
+
         List<CartItem> selectedItems = cart.getCartItems().stream()
                 .filter(ci -> productIds.contains(ci.getProduct().getId()))
                 .toList();
 
-        if (selectedItems.isEmpty())
+        if (selectedItems.isEmpty()) {
             throw new IllegalArgumentException("No selected items");
+        }
 
-        // Создаём заказ
+        BigDecimal total = selectedItems.stream()
+                .map(CartItem::getUnitPrice)
+                .reduce(BigDecimal.ZERO, BigDecimal::add);
+
+        // ==== ОПЛАТА (ДО СОЗДАНИЯ ЗАКАЗА) ====
+        paymentService.pay(total);
+
+        // ==== СОЗДАЁМ ЗАКАЗ ТОЛЬКО ПОСЛЕ УСПЕХА ====
         Order order = new Order();
         order.setUser(user);
-        order.setStatus(OrderStatus.PENDING);
-        order.setTotalAmount(BigDecimal.ZERO);
+        order.setPickupPoint(pickupPoint);
+        order.setTotalAmount(total);
+        order.setStatus(OrderStatus.CONFIRMED);
 
         order = orderRepository.save(order);
 
-        BigDecimal total = BigDecimal.ZERO;
-
-        // Создаём OrderItems
         for (CartItem ci : selectedItems) {
+
             OrderItem oi = new OrderItem();
             oi.setOrder(order);
             oi.setProduct(ci.getProduct());
             oi.setQuantity(ci.getQuantity());
-            oi.setUnitPrice(ci.getProduct().getPrice().multiply(BigDecimal.valueOf(ci.getQuantity())));
-
-            total = total.add(oi.getUnitPrice());
+            oi.setUnitPrice(ci.getUnitPrice());
 
             orderItemRepository.save(oi);
         }
 
-        // Удаляем только выбранные cart items
-        cartService.removeItemsFromCart(cart, selectedItems.stream().map(CartItem::getProduct).collect(Collectors.toList()));
+        cartService.removeItemsFromCart(
+                cart,
+                selectedItems.stream().map(CartItem::getProduct).toList()
+        );
 
         return order;
-    }
-
-    public Page<Order> findAll(Pageable pageable) {
-        return orderRepository.findAll(pageable);
-    }
-
-    public void updateStatus(Long id, OrderStatus status) {
-        Order order = orderRepository.findById(id)
-                .orElseThrow(() -> new OrderNotFoundException(id));
-        order.setStatus(status);
-        orderRepository.save(order);
     }
 }
